--- a/common_services/fledgeddata/pom.xml
+++ b/common_services/fledgeddata/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.63</version>
+		<version>1.0.64-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
