added admin user and password property
Former-commit-id: 85bc15af10d086a3b0f5b8d46981cd1ae9c43cee

--- a/pubman/pubman_ear/src/main/resources/auth.properties
+++ b/pubman/pubman_ear/src/main/resources/auth.properties
@@ -24,6 +24,10 @@
 # Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
+# Used for getting role information
+framework.admin.username=${framework.admin.username}
+framework.admin.password=${framework.admin.password}
+
 escidoc.aa.instance.url=${escidoc.aa.instance.url}
 escidoc.aa.default.target=${escidoc.aa.default.target}
 escidoc.aa.public.key.file=${escidoc.aa.public.key.file}
