using properties for cone role identifiers

--- a/common_services/cone_ear/src/main/resources/cone.properties
+++ b/common_services/cone_ear/src/main/resources/cone.properties
@@ -75,6 +75,10 @@ escidoc.cone.maximum.results=${escidoc.cone.maximum.results}
 # and change this property to the location where you put the copy.
 escidoc.cone.modelsxml.path=${escidoc.cone.modelsxml.path}
 
+# Used for getting role information
+framework.admin.username=${framework.admin.username}
+framework.admin.password=${framework.admin.password}
+
 # URL for stylesheets in common-presentation
 # Default is "/common/"
 escidoc.common.presentation.url=${escidoc.common.presentation.url}
