--- a/common_services/search_ear/src/test/resources/log4j.properties
+++ b/common_services/search_ear/src/test/resources/log4j.properties
@@ -1,15 +1,15 @@
 # Set root category priority to DEBUG and set its only appender to CONSOLE
-log4j.rootLogger=DEBUG, MyConsoleAppender
+log4j.rootLogger=INFO
 
-log4j.logger.test=DEBUG, MyConsoleAppender
-log4j.additivity.test=false
-log4j.logger.de.mpg.escidoc=DEBUG, MyConsoleAppender
-log4j.additivity.de.mpg.escidoc=false
+log4j.logger.test=DEBUG, CONSOLE
+log4j.additivity=false
+log4j.logger.de.mpg.escidoc=DEBUG, CONSOLE
+log4j.logger.org=INFO
+log4j.logger.httpclient=INFO
 
-log4j.appender.MyConsoleAppender=org.apache.log4j.ConsoleAppender
-log4j.appender.MyConsoleAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-5p %m%n
+# CONSOLE is set to be a ConsoleAppender (writes to system console).
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 
-log4j.appender.MyFileAppender=org.apache.log4j.FileAppender
-log4j.appender.MyFileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.MyFileAppender.File=test/testsimplesearch/test.log
+# CONSOLE uses PatternLayout.
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.ConversionPattern=%-5p [%F] %m%n
