--- a/pubman/pubman_installer/src/main/resources/auth.properties
+++ b/pubman/pubman_installer/src/main/resources/auth.properties
@@ -24,6 +24,7 @@
 # Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
+
 # AA local
 # URL to the AA module, default is "/auth/".
 escidoc.aa.instance.url=${escidoc.aa.instance.url}
@@ -58,3 +59,7 @@ escidoc.aa.client.finish.class=${escidoc.aa.client.finish.class}
 escidoc.framework_access.framework.url=${escidoc.framework_access.framework.url}
 # URL of the escidoc-core instance you like to logon to (only for eSciDoc authentication)
 escidoc.framework_access.login.url=${escidoc.framework_access.login.url}
+
+# identifier of the CoNE roles
+escidoc.aa.role.closed.vocabulary.id=${escidoc.framework_access.role.closed.vocabulary.id}
+escidoc.aa.role.open.vocabulary.id=${escidoc.framework_access.role.open.vocabulary.id}
