--- a/pubman/pubman_ear/src/main/resources/auth.properties
+++ b/pubman/pubman_ear/src/main/resources/auth.properties
@@ -24,23 +24,41 @@
 # Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
 
-# Used for getting role information
-framework.admin.username=${framework.admin.username}
-framework.admin.password=${framework.admin.password}
+# identifier of the CoNE roles
+escidoc.aa.role.closed.vocabulary.id=${escidoc.framework_access.role.closed.vocabulary.id}
+escidoc.aa.role.open.vocabulary.id=${escidoc.framework_access.role.open.vocabulary.id}
 
+# AA local
+# URL to the AA module, default is "/auth/".
 escidoc.aa.instance.url=${escidoc.aa.instance.url}
+# This should be set when multiple AA modules are used
+# Default is "http://localhost:8080/auth/clientLogin"
 escidoc.aa.default.target=${escidoc.aa.default.target}
-escidoc.aa.public.key.file=${escidoc.aa.public.key.file}
+# For a productive system, the key pair MUST be generated anew. If not, the system is unsafe.
+# Creating a pair of keys can be done with
+# de.mpg.escidoc.services.aa.crypto.KeyGenerator
+# Default is "private.key", that points to aa_presentation.war/WEB-INF/classes/private.key (for development only).
 escidoc.aa.private.key.file=${escidoc.aa.private.key.file}
 
-# URL of the FIZ framework instance
-escidoc.framework_access.framework.url=${escidoc.framework_access.framework.url}
-# URL of the escidoc-core instance you like to logon to
-escidoc.framework_access.login.url=${escidoc.framework_access.login.url}
-
+# AA remote
+# For a productive system, the key pair MUST be generated anew. If not, the system is unsafe.
+# Creating a pair of keys can be done with
+# de.mpg.escidoc.services.aa.crypto.KeyGenerator
+# Default is "public.key", that points to aa_presentation.war/WEB-INF/classes/public.key (for development only).
+escidoc.aa.public.key.file=${escidoc.aa.public.key.file}
+# An XML configuration that describes the used Authentication mechanism.
+# Default is "conf.xml" which points to a file in aa_presentation.war/WEB-INF/classes
+# To change the configuration, copy this file to a different location and change the property to it.
 escidoc.aa.config.file=${escidoc.aa.config.file}
+# When the AA module is configured to work with the IP authentication, this file is used to identify valid IP adresses.
+# An example can be found at aa_presentation.war/WEB-INF/classes/ips.xml
 escidoc.aa.ip.table=${escidoc.aa.ip.table}
-
+# Depending on the type of authentication chosen, either one class is needed or two (e.g. with eSciDoc authentication).
 #escidoc.aa.client.class=de.mpg.escidoc.services.aa.web.client.IpAaClient
 escidoc.aa.client.start.class=${escidoc.aa.client.start.class}
 escidoc.aa.client.finish.class=${escidoc.aa.client.finish.class}
+
+# URL of the eSciDoc infrastructure instance (only for eSciDoc authentication)
+escidoc.framework_access.framework.url=${escidoc.framework_access.framework.url}
+# URL of the escidoc-core instance you like to logon to (only for eSciDoc authentication)
+escidoc.framework_access.login.url=${escidoc.framework_access.login.url}
