profile env-production-opensource is set as default profile

--- a/common_services/common_presentation/pom.xml
+++ b/common_services/common_presentation/pom.xml
@@ -81,6 +81,9 @@
 	<profiles>
 		<profile>
 			<id>env-production-opensource</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<properties></properties>
 			<build>
 				<plugins>					
