--- a/common_services/aa_presentation/pom.xml
+++ b/common_services/aa_presentation/pom.xml
@@ -46,7 +46,7 @@
 		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
 	</scm>
 	
-	<build>
+	<build>	  
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
@@ -78,40 +78,27 @@
 					<target>1.5</target>
 				</configuration>
 			</plugin>
+			  
+			
+			
 		</plugins>
 	</build>
 	<profiles>
 		<profile>
-			<id>jboss42</id>
+			<id>env-production-opensource</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties></properties>
 			<build>
-				<plugins>
+				<plugins>					
 					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>jboss-maven-plugin</artifactId>
-						<configuration>
-							<jbossHome>${jboss.install.dir}</jbossHome>
-							<hostName>${jboss.deploy.host}</hostName>
-							<port>${jboss.deploy.port}</port>
-						</configuration>
-					</plugin>
-					<plugin>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<version>1.1</version>
-						<executions>
-							<execution>
-								<id>create-standalone-war</id>
-								<phase>package</phase>
-								<goals>
-									<goal>run</goal>
-								</goals>
-								<configuration>
-									<tasks>
-										<jar destfile="${project.build.directory}/${project.artifactId}-${project.version}-standalone.war" basedir="${project.build.directory}/${project.artifactId}-${project.version}" />
-									</tasks>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<configuration>
+						<packagingExcludes>WEB-INF/classes/*.key</packagingExcludes>
+					</configuration>
+			</plugin>
 				</plugins>
 			</build>
 		</profile>
