--- a/pubman/pubman_presentation/pom.xml
+++ b/pubman/pubman_presentation/pom.xml
@@ -82,27 +82,7 @@
 				<groupId>org.zeroturnaround</groupId>
 				<artifactId>javarebel-maven-plugin</artifactId>
 				<version>1.0.5</version>
-			</plugin>     		
-      		<plugin>
-				<artifactId>maven-antrun-plugin</artifactId>
-						<executions>
-							<execution>
-								<phase>compile</phase>
-								<goals>
-									<goal>run</goal>
-								</goals>
-								<configuration>
-									<tasks>
-										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
-										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
-										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedIn.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
-										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedOut.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
-										<!--  delete dir="${project.build.directory}/main/webapp/home/opensource"/-->
-									</tasks>										
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
+			</plugin>     
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -152,7 +132,16 @@
         		<groupId>org.apache.maven.plugins</groupId>
         		<artifactId>maven-war-plugin</artifactId>
         		<configuration>
-        			<warSourceExcludes>**/opensource/**</warSourceExcludes>
+        			<warSourceExcludes>src/main/resources/opensource</warSourceExcludes>
+        			<webResources>
+            			<resource>
+            				<targetPath>WEB-INF/classes</targetPath>
+              				<directory>src/main/resources/mpg</directory>             				
+              				<includes>
+                				<include>**/*.properties</include>
+              				</includes>
+            			</resource>
+          			</webResources>
         		</configuration>
       		</plugin>      		
       		<plugin>
@@ -170,6 +159,53 @@
 										<copy file="${project.basedir}/src/main/webapp/home/mpg/StartPageLoggedIn.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
 										<copy file="${project.basedir}/src/main/webapp/home/mpg/StartPageLoggedOut.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
 										<!--  delete dir="${project.build.directory}/main/webapp/home/mpg"/-->
+									</tasks>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+			</plugins>	
+			</build>
+		</profile>
+		<profile>
+			<id>env-production-opensource</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties></properties>
+			<build>
+			<plugins>
+			<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-war-plugin</artifactId>
+        		<configuration>
+        			<warSourceExcludes>src/main/resources/mpg</warSourceExcludes>
+        			<webResources>
+            			<resource>
+            				<targetPath>WEB-INF/classes</targetPath>
+              				<directory>src/main/resources/opensource</directory>             				
+              				<includes>
+                				<include>**/*.properties</include>
+              				</includes>
+            			</resource>
+          			</webResources>
+        		</configuration>
+      		</plugin>      		 		
+      		<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>compile</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<tasks>
+										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
+										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
+										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedIn.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
+										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedOut.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
+										<!--  delete dir="${project.build.directory}/main/webapp/home/opensource"/-->
 									</tasks>
 								</configuration>
 							</execution>
