--- a/common_services/aa_presentation/pom.xml
+++ b/common_services/aa_presentation/pom.xml
@@ -102,6 +102,24 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<id>env-testing-continuum</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties></properties>
+			<build>
+			</build>
+		</profile>
+		<profile>
+			<id>env-development</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties></properties>
+			<build>
+			</build>
+		</profile>
 	</profiles>
 	<dependencies>
 		<dependency>
