--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -679,6 +679,7 @@
 		<escidoc.pubman.external.organisation.id>escidoc:persistent22</escidoc.pubman.external.organisation.id>
 		<escidoc.pubman.root.organisation.id>escidoc:215001</escidoc.pubman.root.organisation.id>
 		<escidoc.validation.refresh.interval>180</escidoc.validation.refresh.interval>
+		<escidoc.cone.service.url>http://localhost:8080/cone/</escidoc.cone.service.url>
 		<escidoc.cone.querier.class>de.mpg.escidoc.services.cone.SQLQuerier</escidoc.cone.querier.class>
 		<escidoc.cone.database.driver.class>org.postgresql.Driver</escidoc.cone.database.driver.class>
 		<escidoc.cone.database.server.name>zim02.gwdg.de</escidoc.cone.database.server.name>
@@ -779,6 +780,7 @@
 		<escidoc.pidcache.dummy.url>http://pubman.mpdl.mpg.de/pubman/faces/PidNotResolved.jsp?id=</escidoc.pidcache.dummy.url>
 		<escidoc.pid.gwdg.service.url>http://handle.gwdg.de:8080/pidservice</escidoc.pid.gwdg.service.url>
 		<escidoc.pid.gwdg.timeout>3000</escidoc.pid.gwdg.timeout>
+		<escidoc.pidcache.refresh.interval></escidoc.pidcache.refresh.interval>
 		<escidoc.pid.service.create.path>/write/create</escidoc.pid.service.create.path>
 		<escidoc.pid.service.view.path>/read/view</escidoc.pid.service.view.path>
 		<escidoc.pid.service.delete.path>/write/delete</escidoc.pid.service.delete.path>
@@ -837,7 +839,7 @@
 		<escidoc.common.presentation.url>http://localhost:8080/common/</escidoc.common.presentation.url>
 	</properties>
 	<profiles>
-		<!-- this profile gets activated for an opensource release production -->
+		<!-- activate this profile for an opensource release production -->
 		<profile>			
 			<id>env-production-opensource</id>
 			<activation>
