--- a/common_services/aa_presentation/pom.xml
+++ b/common_services/aa_presentation/pom.xml
@@ -31,19 +31,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.64-SNAPSHOT</version>
+		<version>1.0.64</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>aa_presentation</artifactId>
 	<packaging>war</packaging>
 	<name>aa_presentation</name>
-	<version>0.2.2-SNAPSHOT</version>
+	<version>0.2.2</version>
 	
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/aa_presentation</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/aa_presentation</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.64/aa_presentation</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.64/aa_presentation</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.64/aa_presentation</url>
 	</scm>
 	
 	<build>	  
@@ -89,7 +89,7 @@
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
-			<properties></properties>
+			<properties />
 			<build>
 				<plugins>					
 					<plugin>
@@ -107,7 +107,7 @@
 			<activation>
 				<activeByDefault>false</activeByDefault>
 			</activation>
-			<properties></properties>
+			<properties />
 			<build>
 			</build>
 		</profile>
@@ -116,7 +116,7 @@
 			<activation>
 				<activeByDefault>false</activeByDefault>
 			</activation>
-			<properties></properties>
+			<properties />
 			<build>
 			</build>
 		</profile>
@@ -150,14 +150,14 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>aa_logic</artifactId>
-			<version>0.2.2-SNAPSHOT</version>
+			<version>0.2.2</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.64-SNAPSHOT</version>
+			<version>1.1.64</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
