--- a/common_services/common_presentation/pom.xml
+++ b/common_services/common_presentation/pom.xml
@@ -31,19 +31,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.64-SNAPSHOT</version>
+		<version>1.0.64</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>common_presentation</artifactId>
 	<packaging>war</packaging>
 	<name>common_presentation</name>
-	<version>1.0.53-SNAPSHOT</version>
+	<version>1.0.53</version>
 	
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/common_presentation</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/common_presentation</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.64/common_presentation</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.64/common_presentation</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.64/common_presentation</url>
 	</scm>
 	
 	<build>
@@ -84,7 +84,7 @@
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
-			<properties></properties>
+			<properties />
 			<build>
 				<plugins>					
 					<plugin>
@@ -102,7 +102,7 @@
 			<activation>
 				<activeByDefault>false</activeByDefault>
 			</activation>
-			<properties></properties>
+			<properties />
 			<build>
 			</build>
 		</profile>
@@ -111,10 +111,10 @@
 			<activation>
 				<activeByDefault>false</activeByDefault>
 			</activation>
-			<properties></properties>
+			<properties />
 			<build>
 			</build>
 		</profile>
 	</profiles>
-	<dependencies></dependencies>
+	<dependencies />
 </project>
