--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -32,7 +32,7 @@
 	<groupId>de.mpg.escidoc.pubman</groupId>
 	<artifactId>pubman</artifactId>
 	<packaging>pom</packaging>
-	<version>7.1.3-SNAPSHOT</version>
+	<version>7.2.0</version>
 	<name>pubman</name>
 	<url>http://pubman.mpdl.mpg.de/software</url>
 	<description>
@@ -224,9 +224,9 @@
 		<module>pubman_installer</module>
 	</modules>
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/pubman/</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.2.0</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.2.0</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.2.0</url>
 	</scm>
 	<repositories>
 		<repository>
@@ -780,7 +780,7 @@
 		<escidoc.pidcache.dummy.url>http://pubman.mpdl.mpg.de/pubman/faces/PidNotResolved.jsp?id=</escidoc.pidcache.dummy.url>
 		<escidoc.pid.gwdg.service.url>http://handle.gwdg.de:8080/pidservice</escidoc.pid.gwdg.service.url>
 		<escidoc.pid.gwdg.timeout>3000</escidoc.pid.gwdg.timeout>
-		<escidoc.pidcache.refresh.interval></escidoc.pidcache.refresh.interval>
+		<escidoc.pidcache.refresh.interval />
 		<escidoc.pid.service.create.path>/write/create</escidoc.pid.service.create.path>
 		<escidoc.pid.service.view.path>/read/view</escidoc.pid.service.view.path>
 		<escidoc.pid.service.delete.path>/write/delete</escidoc.pid.service.delete.path>
