Pubman pom.xml updated
Former-commit-id: c89dd53c381b3421bf74b6b5bbe19cd4e7008c57

--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -853,6 +853,7 @@
 				<escidoc.pidcache.cache.size.max>5</escidoc.pidcache.cache.size.max>
 				<escidoc.pidcache.refresh.interval>100</escidoc.pidcache.refresh.interval>
 				<escidoc.pubman.instance.url>http://localhost:8080</escidoc.pubman.instance.url>
+				<escidoc.systemtype>workstation</escidoc.systemtype>
 			</properties>
 		</profile>
 		<!-- this profile is used by developers -->
