PubMan pom.xml updated pubman.properties adjusted
Former-commit-id: 8995a84cedfde3ebd5efd975cfe0f2bf2a8702cb

--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -846,6 +846,7 @@
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<properties>
+			    <escidoc.syndication.service.url>http://localhost:8080/syndication</escidoc.syndication.service.url>
 				<escidoc.cone.service.url>http://localhost:8080/cone/</escidoc.cone.service.url>
 				<escidoc.import.database.name>../server/default/data/hypersonic/localDB</escidoc.import.database.name>
 				<escidoc.import.surveyor.interval>10</escidoc.import.surveyor.interval>
@@ -890,6 +891,7 @@
 			</build>
 			<properties>
 				<escidoc.cone.service.url>http://localhost:8080/cone/</escidoc.cone.service.url>
+				<escidoc.syndication.service.url>http://localhost:8080/syndication</escidoc.syndication.service.url>
 				<escidoc.import.database.name>../server/default/data/hypersonic/localDB</escidoc.import.database.name>
 				<escidoc.import.surveyor.interval>10</escidoc.import.surveyor.interval>
 				<escidoc.pid.pidcache.service.url>http://localhost:8080/pidcache/handle</escidoc.pid.pidcache.service.url>
