- userGroupGrants included into login process - changes for NIMS - Transformations adjusted

--- a/common_services/aa_presentation/pom.xml
+++ b/common_services/aa_presentation/pom.xml
@@ -120,6 +120,15 @@
 			<build>
 			</build>
 		</profile>
+		<profile>
+			<id>env-production-nims</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties />
+			<build>
+			</build>
+		</profile>
 	</profiles>
 	<dependencies>
 		<dependency>
