--- a/common_services/transformation/src/main/resources/transformations/otherFormats/conf/edoc.properties
+++ b/common_services/transformation/src/main/resources/transformations/otherFormats/conf/edoc.properties
@@ -1,3 +1,3 @@
 configuration=import-name=OTHER,CoNE=true
-import-name=AEI,BPC,CBS,ETH,FHI,MPIA,MPIE,MPIeR,MPIK,EVOLBIO,MPIMET,MPINEURO,MPIGF,MPIINF,MPIIS,MPIMF,MPIMMG,MPIPF,MPIS,MPIP,MPIPL,MPI MoleGen,KHI,BiblHertz,MPQ,MPIEVA,MPIKOFO,MPIKYB,MPIDynamics,MPIBioChem,MPIPsykl,MPIIPP,OTHER
+import-name=AEI,BPC,CBS,ETH,FHI,MPIA,MPIE,MPIeR,MPIK,EVOLBIO,MPIMET,MPINEURO,MPIGF,MPIINF,MPIIS,MPIMF,MPIMMG,MPIPF,MPIS,MPIP,MPIPL,MPI MoleGen,KHI,BiblHertz,MPQ,MPIEVA,MPIKOFO,MPIKYB,MPIDynamics,MPIBioChem,MPIPsykl,MPIIPP,MPIIB,MolePhys,OTHER
 CoNE=true,false
