--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -43,6 +43,9 @@ escidoc.pubman.instance.context.path=${escidoc.pubman.instance.context.path}
 escidoc.pubman.item.pattern=${escidoc.pubman.item.pattern}
 escidoc.pubman.component.pattern=${escidoc.pubman.component.pattern}
 
+# Seal number for the current instance
+escidoc.pubman.instance.seal_number=${escidoc.pubman.instance.seal_number}
+
 # URL for stylesheets in common-presentation
 escidoc.pubman.common.presentation.url=${escidoc.pubman.common.presentation.url}
 escidoc.common.presentation.url=${escidoc.common.presentation.url}
@@ -51,22 +54,22 @@ escidoc.common.presentation.url=${escidoc.common.presentation.url}
 escidoc.pubman.policy.url=${escidoc.pubman.policy.url}
 escidoc.pubman.contact.url=${escidoc.pubman.contact.url}
 
-<!-- Properties for PubMan standard theme-->
+# Properties for PubMan standard theme
 escidoc.pubman.stylesheet.standard.url=${escidoc.pubman.stylesheet.standard.url}
 escidoc.pubman.stylesheet.standard.type=${escidoc.pubman.stylesheet.standard.type}
 escidoc.pubman.stylesheet.standard.apply=${escidoc.pubman.stylesheet.standard.apply}
 
-<!-- Properties for PubMan contrast theme-->
+# Properties for PubMan contrast theme
 escidoc.pubman.stylesheet.contrast.url=${escidoc.pubman.stylesheet.contrast.url}
 escidoc.pubman.stylesheet.contrast.type=${escidoc.pubman.stylesheet.contrast.type}
 escidoc.pubman.stylesheet.contrast.apply=${escidoc.pubman.stylesheet.contrast.apply}
 
-<!-- Properties for PubMan classic theme-->
+# Properties for PubMan classic theme
 escidoc.pubman.stylesheet.classic.url=${escidoc.pubman.stylesheet.classic.url}
 escidoc.pubman.stylesheet.classic.type=${escidoc.pubman.stylesheet.classic.type}
 escidoc.pubman.stylesheet.classic.apply=${escidoc.pubman.stylesheet.classic.apply}
 
-<!-- Properties for PubMan special theme-->
+# Properties for PubMan special theme
 escidoc.pubman.stylesheet.special.url=${escidoc.pubman.stylesheet.special.url}
 escidoc.pubman.stylesheet.special.type=${escidoc.pubman.stylesheet.special.type}
 escidoc.pubman.stylesheet.special.apply=${escidoc.pubman.stylesheet.special.apply}
@@ -86,17 +89,17 @@ escidoc.common.stylesheet.classic.url=${escidoc.common.stylesheet.classic.url}
 escidoc.common.stylesheet.classic.type=${escidoc.common.stylesheet.classic.type}
 escidoc.common.stylesheet.classic.apply=${escidoc.common.stylesheet.classic.apply}
 
-<!-- Properties for common special theme-->
+# Properties for common special theme
 escidoc.common.stylesheet.special.url=${escidoc.pubman.stylesheet.special.url}
 escidoc.common.stylesheet.special.type=${escidoc.pubman.stylesheet.special.type}
 escidoc.common.stylesheet.special.apply=${escidoc.pubman.stylesheet.special.apply}
 
-<!-- URL of the favicon-->
+# URL of the favicon
 escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
 escidoc.pubman.favicon.apply=${escidoc.pubman.favicon.apply}
 
 
-<!-- version of the pubman cookie (has to be changed if style information is changed)-->
+# version of the pubman cookie (has to be changed if style information is changed)
 escidoc.pubman.cookie.version=${escidoc.pubman.cookie.version}
 
 
