--- a/pubman/pubman_presentation/pom.xml
+++ b/pubman/pubman_presentation/pom.xml
@@ -113,6 +113,7 @@
 										<ignore />
 									</action>
 								</pluginExecution>
+								
 							</pluginExecutions>
 						</lifecycleMappingMetadata>
 					</configuration>
@@ -125,7 +126,7 @@
 	<profiles>
 		<profile>
 			<id>env-development</id>
-			<properties />
+			<properties></properties>
 			<build>
 			<plugins>
 			<plugin>
@@ -133,6 +134,7 @@
         		<artifactId>maven-war-plugin</artifactId>
         		<configuration>
         			<warSourceExcludes>${project.basedir}/src/main/resources/opensource</warSourceExcludes>
+        			<warSourceExcludes>${project.basedir}/src/main/resources/nims</warSourceExcludes>
         			<webResources>
             			<resource>
             				<targetPath>WEB-INF/classes</targetPath>
@@ -154,10 +156,10 @@
 								</goals>
 								<configuration>
 									<tasks>
-										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf" />
-										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf" />
-										<copy file="${project.basedir}/src/main/webapp/home/mpg/StartPageLoggedIn.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf" />
-										<copy file="${project.basedir}/src/main/webapp/home/mpg/StartPageLoggedOut.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf" />
+										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
+										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
+										<copy file="${project.basedir}/src/main/webapp/home/mpg/StartPageLoggedIn.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
+										<copy file="${project.basedir}/src/main/webapp/home/mpg/StartPageLoggedOut.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
 										<!--  delete dir="${project.build.directory}/main/webapp/home/mpg"/-->
 									</tasks>
 								</configuration>
@@ -172,7 +174,7 @@
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
-			<properties />
+			<properties></properties>
 			<build>
 			<plugins>
 			<plugin>
@@ -180,6 +182,7 @@
         		<artifactId>maven-war-plugin</artifactId>
         		<configuration>
         			<warSourceExcludes>${project.basedir}/src/main/resources/mpg</warSourceExcludes>
+        			<warSourceExcludes>${project.basedir}/src/main/resources/nims</warSourceExcludes>
         			<webResources>
             			<resource>
             				<targetPath>WEB-INF/classes</targetPath>
@@ -201,10 +204,55 @@
 								</goals>
 								<configuration>
 									<tasks>
-										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf" />
-										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf" />
-										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedIn.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf" />
-										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedOut.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf" />
+										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
+										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
+										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedIn.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
+										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedOut.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
+										<!--  delete dir="${project.build.directory}/main/webapp/home/opensource"/-->
+									</tasks>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+			</plugins>	
+			</build>
+		</profile>
+		<profile>
+			<id>env-production-nims</id>
+			<properties></properties>
+			<build>
+			<plugins>
+			<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-war-plugin</artifactId>
+        		<configuration>
+        			<warSourceExcludes>${project.basedir}/src/main/resources/mpg</warSourceExcludes>
+        			<warSourceExcludes>${project.basedir}/src/main/resources/opensource</warSourceExcludes>
+        			<webResources>
+            			<resource>
+            				<targetPath>WEB-INF/classes</targetPath>
+              				<directory>${project.basedir}/src/main/resources/nims</directory>             				
+              				<includes>
+                				<include>**/*.properties</include>
+              				</includes>
+            			</resource>
+          			</webResources>
+        		</configuration>
+      		</plugin>      		 		
+      		<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>compile</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<tasks>
+										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
+										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
+										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedIn.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
+										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedOut.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
 										<!--  delete dir="${project.build.directory}/main/webapp/home/opensource"/-->
 									</tasks>
 								</configuration>
