logging in target directory now
Former-commit-id: 33f82e242e3116dd9bd59dd2c6e5bab77179b441

--- a/pubman/pubman_installer/src/test/resources/log4j.properties
+++ b/pubman/pubman_installer/src/test/resources/log4j.properties
@@ -38,5 +38,5 @@ log4j.appender.MyConsoleAppender.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p 
 log4j.appender.MyFileAppender=org.apache.log4j.FileAppender
 log4j.appender.MyFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.MyFileAppender.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p [%F] %m%n
-log4j.appender.MyFileAppender.File=installer.log
+log4j.appender.MyFileAppender.File=target/installer.log
 log4j.appender.MyFileAppender.append=false
