--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -47,7 +47,7 @@
 	<licenses>
 		<license>
 			<name>Common Development And Distribution License</name>
-			<url>http://www.sun.com/cddl/cddl.html</url>
+			<url>http://pubman.mpdl.mpg.de/software/cddl.html</url>
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
